Applied learning to day 1, added day 2 in new format